# multi-agent-langchain-main

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/domains/: manufacturing.json
config/env/: .env.example
docs/: SQLITE_MIGRATION_PLAN.md
examples/: define_agents_and_run.py
migrations/: env.py
migrations/versions/: 001_initial.sql  001_initial_sqlite.sql  002_add_validation_columns.sql  003_run_events.sql
scripts/: generate_architecture_diagram.py  listen_orchestrator.py  migrate.py  query_cli.py  seed_manufacturing_data.py  startup.py  test_sqlite_setup.py
src/: __init__.py  run.py
src/agent/: __init__.py  callbacks.py  deps.py  guardrails.py  main.py  worker.py
src/core/: __init__.py  exceptions.py  logging_config.py
src/core/config/: __init__.py  env.py  loader.py  models.py  validation.py
src/core/contracts/: __init__.py  agent.py  gateway.py  orchestrator.py  protocol.py
src/data_access/: __init__.py  factory.py
src/data_access/app_db/: __init__.py  backends.py  base.py  sqlite_conn.py
src/gateway/: __init__.py  deps.py  main.py  middleware.py
src/orchestrator/: __init__.py  classifier.py  deps.py  executor.py  main.py  plan_validation.py  planner.py  reporter.py  session.py
src/tools/: __init__.py  registry.py
tests/integration/: test_run_flow.py
tests/unit/: test_config_loader.py  test_executor.py  test_models_base_url.py  test_plan_validation.py  test_planner.py  test_protocol.py  test_run.py  test_tools.py
(+15 files in other folders)
